infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
spec:
  ingressClassName: nginx
  rules:
    - host: internshipms.dev
      http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-srv
                port:
                  number: 3001
          - path: /api/message
            pathType: Prefix
            backend:
              service:
                name: message-srv
                port:
                  number: 3007
